Infrastructure/kubernetes/cloud/service1.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: service1
  labels:
    version: "#{RELEASE_ARTIFACTS__SERVICE1_BUILDNUMBER}"
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      namespace: #{Release.EnvironmentName}
      labels:
        app: service1
    spec:
      hostname: service1
      containers:
        - name: service1
          image: #{registryName}/service1:#{RELEASE_ARTIFACTS__SERVICE1_BUILDNUMBER}
          ports:
            - containerPort: 8001
      imagePullSecrets:
        - name: regsecret
---
apiVersion: v1
kind: Service
metadata:
  name: service1
  namespace: #{Release.EnvironmentName}
spec:
  ports:
    - protocol: TCP
      port: 8001
  selector:
    app: service1
